# Agentic-System-Builder

./: .env.example  .env.sample  .gitignore  FORMATTER_FLOW_DIAGRAM.md  FORMATTER_IMPLEMENTATION_SUMMARY.md  FORMATTER_NODE_README.md  FORMATTER_QUICK_REFERENCE.md  FORMATTER_UPDATES.md  NODE_LIMIT_CHANGES.md  PER_NODE_REASONING.md  README.md  REASONING_FEATURE.md  audit_before.txt  demo_plugin_system.py  demonstrate_ideal_plan.py  dowload_langsmith_traces.py  graph.py  langgraph.json  pyproject.toml  requirements.txt  test_formatter.py  test_langgraph_direct.py  test_planning_system.py  test_plugin_compatibility.py  test_plugins.py  test_specific_prompt.py  test_updated_prompts.py
.langgraph_api/: .langgraph_ops.pckl
prompt2graph/: .env.example  .gitignore  langgraph.json  pyproject.toml
prompt2graph/src/agent/: confidence.py  planner.py  report.py  state.py
prompt2graph/src/config/: settings.py
prompts/: plan_system.jinja  plan_user.jinja
scripts/: audit_mvp.py
src/: __init__.py  settings.py
src/agent/: __init__.py  confidence.py  executor.py  graph.py  hitl.py  planner.py  (+3 more)
tests/: conftest.py  test_architecture_designer.py  test_build_coordinator.py  test_code_fixer.py  test_code_validator.py  test_comprehensive.py  test_diff_patcher.py  test_e2e_automation.py  test_e2e_generate_then_dev.py  test_executor.py  test_final_check.py  test_graph_attachment_wrapper.py  test_graph_initialization.py  test_hitl_resume_string.py  test_message_handling.py  test_node_implementor.py  test_pipeline.py  test_planner.py  test_planner_integration.py  test_prompts_path.py  test_prompts_util.py  test_repair_nodes.py  test_report.py  test_scaffold.py  test_state_generator.py  test_state_preparer.py  test_state_sandbox.py  test_state_schema_fix.py  test_syntax_validator.py
(+101 files in other folders)
