[project]
name = "agentic-system-builder"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.39",
  "langchain-core>=0.2.28",
  "langchain-openai>=0.2.4",
  "pydantic>=2.7,<3",
  "pydantic-settings",
  "langgraph-checkpoint-sqlite",
]

[project.optional-dependencies]
dev = ["pytest>=8.2,<9", "ruff>=0.5.6,<0.6"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
