[project]
name = "agentic-system-builder"
version = "0.1.3"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.6,<0.7",
  "langchain-core>=0.3,<0.4",
  "langchain-openai>=0.3,<0.4",
  "pydantic>=2.7,<3",
  "pydantic-settings",
  "langgraph-checkpoint-sqlite",
  "httpx>=0.27,<1",
  "langfuse>=2,<3",
  "typing_extensions>=4.9,<5",
]

[project.optional-dependencies]
dev = ["pytest>=8.2,<9", "ruff>=0.5.6,<0.6", "pytest-asyncio"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
