[project]
name = "prompt2graph"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.39,<0.3.0",
  "langchain-core>=0.2.28,<0.3.0",
  "langchain-openai>=0.2.4,<0.3.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "aiosqlite>=0.20.0,<0.21.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "ruff>=0.5.6,<0.6",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
